--- a/css/demo.css
+++ b/css/demo.css
@@ -126,6 +126,12 @@ a:hover, a:focus {
 	background: #eee;
 }
 
+.information {
+	color: #888; 
+	font-weight: 100;
+	font-size: 12px;
+}
+
 @media only screen and (max-width: 767px) {
 	.results .result {
 		float:none;
